--- a/ng_geo/views/index.ejs
+++ b/ng_geo/views/index.ejs
@@ -47,9 +47,8 @@
     <script src="js/district4.js"></script>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/api_key.js"></script>
     <script id="initMapCall">
-        $("#initMapCall").after(`<script src='https://maps.googleapis.com/maps/api/js?key=${API_KEY}&callback=initMap'><//script>`);
+        $("#initMapCall").after(`<script src='https://maps.googleapis.com/maps/api/js?key=<%=API_KEY%>&callback=initMap'><//script>`);
     </script>
 </body>
 
